kubernetes_configure/Ratel/ratel_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ratel
  namespace: kube-system
spec:
  rules:
  - host: ratel.toptops.top
    http:
      paths:
      - backend:
          serviceName: ratel
          servicePort: 8888
        path: /
